--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,23 @@
       <version>2.4</version>
 	</dependency>
 	
+	<dependency>
+      <groupId>info.cukes</groupId>
+      <artifactId>cucumber-java</artifactId>
+      <version>1.2.5</version>
+	</dependency>
+	
+	<dependency>
+      <groupId>info.cukes</groupId>
+      <artifactId>cucumber-junit</artifactId>
+      <version>1.2.5</version>
+	</dependency>
+	
+	<dependency>
+      <groupId>info.cukes</groupId>
+      <artifactId>cucumber-core</artifactId>
+      <version>1.2.5</version>
+	</dependency>
     
   </dependencies>
   
